infra/preinstall/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-test
  namespace: default
spec:
  restartPolicy: Never
  containers:
  - name: curl
    image: curlimages/curl:8.6.0
    command: ["sh", "-c", "sleep 365d"]
