infra/preinstall/pod-vllm-mount.yaml
apiVersion: v1
kind: Pod
metadata:
  name: model1-loader1
spec:
  restartPolicy: Never
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: karpenter.sh/capacity-type
                operator: In
                values:
                  - on-demand  
  containers:
    - name: loader
      image: docker.io/ronbutbul135/ubuntu:22.04
      command:
        - "sleep"
        - "infinity"
      volumeMounts:
        - name: model-storage
          mountPath: /data
  volumes:
    - name: model-storage
      persistentVolumeClaim:
        claimName: vllm-llama3-storage-claim
