infra/preinstall/testgpu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gpu-test-pod
spec:
  restartPolicy: Never
  containers:
  - name: gpu-container
    image: nvcr.io/nvidia/pytorch:23.09-py3
    command: ["sleep", "3600"]
    resources:
      limits:
        nvidia.com/gpu: 1
  tolerations:
  - key: nvidia.com/gpu
    operator: Exists
    effect: NoSchedule
